@@ -5,6 +5,7 @@ Hubert Figuière:
 
 Morten:
 	* FLOOR, CEILING: Improve xl compatibility.  [#703]
+	* Fix dependency problems with arrays.  [#725] [#647]
 
 --------------------------------------------------------------------------
 Gnumeric 1.12.55
